<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F2F2F7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Top Banner -->
        <!-- Line -->
        <LinearLayout
            android:id="@+id/mainLogoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Logo Icon-->
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/countify_logo" />

            <!-- Application Name -->
            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/eras_itc_demi"
                android:text="@string/app_name"
                android:textColor="@color/button_gray"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Setting Icon -->
            <ImageView
                android:id="@+id/iv_backBtn"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="15dp"
                android:src="@drawable/back_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="370dp"
            android:layout_height="1dp"
            android:background="@color/button_gray"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainLogoContainer"
            app:layout_constraintVertical_bias="0.019" />

        <!-- Account Details Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="26dp"
            android:text="@string/settings_header"
            android:textColor="#000"
            android:textSize="20sp" />

        <!-- Details Card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Name Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <!-- Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_lbl"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <!-- Input Field -->
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="end"
                    android:text="@string/name_example"
                    android:textColor="#757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Surname Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <!-- Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname_lbl"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <!-- Input Field -->
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="end"
                    android:text="@string/surname_example"
                    android:textColor="#757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Email Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <!-- Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_lbl"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <!-- Input Field -->
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="end"
                    android:inputType="textEmailAddress"
                    android:text="@string/email_example"
                    android:textColor="#757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Phone Number Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_lbl"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <!-- Input Field -->
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="end"
                    android:inputType="phone"
                    android:text="@string/phone_example"
                    android:textColor="#757575"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>


        <!-- Toggle Settings -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Notifications -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_lbl"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/switch_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Theme -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_lbl"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/switch_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Language -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_lbl"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/dropdown_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_down" />
            </LinearLayout>
        </LinearLayout>

        <!-- Logout and Delete Buttons -->
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FF6B6B"
            android:text="@string/logout_btn"
            android:textAllCaps="false"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#82B1FF"
            android:text="@string/delete_btn"
            android:textAllCaps="false"
            android:textColor="#FFF" />

        <!-- Footer Info -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/creators_lbl"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/version_lbl"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>