<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Register Wrapper -->
    <LinearLayout
        android:id="@+id/mainRegisterWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Logo & Name -->
        <TextView
            android:id="@+id/tv_Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eras_itc_demi"
            android:text="@string/app_name"
            android:textColor="@color/button_gray"
            android:textSize="48sp"
            android:drawablePadding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:contentDescription="@string/app_name"
            app:drawableStartCompat="@drawable/countify_logo_resized_70" />


        <!-- Register Form Container -->
        <LinearLayout
            android:id="@+id/registerFormContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mainLogoContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:gravity="center">

            <!-- First Name EditText -->
            <EditText
                android:id="@+id/edt_FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_gray"
                android:drawableStart="@drawable/user_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:hint="@string/firstname"
                android:textColorHint="@color/hint_text_grey"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/hint_text_grey"
                android:autofillHints="name" />

            <!-- Last Name EditText -->
            <EditText
                android:id="@+id/edt_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/button_gray"
                android:drawableStart="@drawable/user_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:hint="@string/lastname"
                android:textColorHint="@color/hint_text_grey"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/hint_text_grey"
                android:autofillHints="name" />

            <!-- Email EditText -->
            <EditText
                android:id="@+id/edt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/button_gray"
                android:drawableStart="@drawable/mail_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:hint="@string/email"
                android:textColorHint="@color/hint_text_grey"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/hint_text_grey"
                android:autofillHints="emailAddress" />

            <!-- Phone Number EditText -->
            <EditText
                android:id="@+id/edt_PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/button_gray"
                android:drawableStart="@drawable/phone_icon"
                android:drawablePadding="6dp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:hint="@string/phone_number"
                android:textColorHint="@color/hint_text_grey"
                android:inputType="phone"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/hint_text_grey"
                android:autofillHints="phone" />

            <!-- Password EditText -->
            <EditText
                android:id="@+id/edt_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/hint_text_grey"
                android:fontFamily="@font/inter_regular"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="8dp"
                android:backgroundTint="@color/button_gray"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:autofillHints="password"/>

            <!-- Confirm Password EditText -->
            <EditText
                android:id="@+id/edt_ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/hint_text_grey"
                android:fontFamily="@font/inter_regular"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="8dp"
                android:backgroundTint="@color/button_gray"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:autofillHints="password"/>

            <!-- Register Button -->
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_Register"
                android:layout_width="300dp"
                android:layout_height="44dp"
                android:layout_marginTop="40dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/button_green"
                app:cardCornerRadius="25dp"
                android:layout_gravity="center">

                <!-- Text on top of the Button Background -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <!-- SSO Register Options -->
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_SSO"
                android:layout_width="300dp"
                android:layout_height="44dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/button_gray"
                app:cardCornerRadius="25dp"
                app:layout_constraintTop_toBottomOf="@id/btn_SSO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <!-- Horizontal LinearLayout for Icons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/img_GoogleImage"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/google"
                        android:src="@drawable/google_logo" />

                    <!-- Text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textColor="@color/white"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:textSize="27sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Login Account Link -->
            <TextView
                android:id="@+id/btn_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_prompt"
                android:textAlignment="center"
                android:textColor="@color/button_gray"
                android:textSize="16sp"
                android:fontFamily="@font/segoe_ui"
                app:layout_constraintTop_toBottomOf="@id/btn_SSO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>