<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainLoginWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/mainLogoContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginRight="3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/countify_logo"/>

            <!-- App Name -->
            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/eras_itc_demi"
                android:text="@string/app_name"
                android:textColor="@color/button_gray"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/linearLayoutContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mainLogoContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Email EditText -->
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:fontFamily="@font/inter_regular"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="32dp"
                android:drawablePadding="8dp"
                android:backgroundTint="@android:color/darker_gray" />

            <!-- Password EditText -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:fontFamily="@font/inter_regular"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:backgroundTint="@android:color/darker_gray" />

            <!-- Login Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/login"
                android:textSize="27sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/segoe_ui_bold"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="@color/button_green"
                android:layout_marginTop="40dp" />

            <!-- Social Media Login Options -->
            <LinearLayout
                android:id="@+id/socialMediaLayout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:weightSum="4"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="@color/button_gray">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:src="@drawable/github_logo" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:src="@drawable/google_logo" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:src="@drawable/microsoft_logo" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:src="@drawable/apple_logo" />
            </LinearLayout>

            <!-- Create Account Link -->
            <TextView
                android:id="@+id/createAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_prompt"
                android:textAlignment="center"
                android:textColor="@color/button_gray"
                android:textSize="14sp"
                android:fontFamily="@font/segoe_ui"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>